# platzi-langchain

./: README.md  pyproject.toml
notebooks/: 01_jss_modelos_prompts_y_cadenas.ipynb  02_jss_manejo_de_documentos_y_embeddings.ipynb
references/: notebook_1_modelos_prompts_y_cadenas.ipynb  notebook_2_manejo_de_documentos_y_embeddings.ipynb
utils/: config.py  paths.py
