[project]
name = "platzi-langchain"
version = "0.1.0"
description = "LangChain"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "ipywidgets",
    "pathlib",
    "langchain",
    "transformers",
    "einops",
    "accelerate",
    "langchain-huggingface",
    "openai",
    "langchain-openai",
    "tiktoken",
    "langchain-community",
    "pypdf",
    "chromadb"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
